feat(workspaces): add membership permissions
